--- a/master/shakaplayerurl.html
+++ b/master/shakaplayerurl.html
@@ -1,29 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>NoobGLTCH – Direct Forced Autoplay</title>
+  <title>NoobGLTCH – Direct Force Player</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.16.3/controls.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.16.3/shaka-player.ui.js"></script>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
   <style>
-    html, body { margin: 0; padding: 0; width: 100%; height: 100%; overflow: hidden; background: #000; font-family: sans-serif; }
-    .shaka-video-container, video { width: 100%; height: 100%; background: #000; display: block; }
-    
+    html,
+    body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      background: #000;
+    }
+
+    .shaka-video-container,
+    video {
+      width: 100%;
+      height: 100%;
+      background: #000;
+      display: block;
+    }
+
+    /* WM Opacity 2 - Absolute Visibility */
     .watermark {
       position: absolute;
-      top: 40px; 
+      top: 40px;
       right: 20px;
-      opacity: 2; /* Forced full visibility */
+      opacity: 2;
       font-weight: bold;
       color: #e53935;
       z-index: 10;
       pointer-events: none;
       font-size: 1.2rem;
-      text-shadow: 2px 2px 4px rgba(0,0,0,0.8);
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.9);
     }
 
     #overlay {
@@ -35,67 +49,67 @@
       background: #000;
       color: #fff;
       z-index: 1000;
-      transition: opacity 0.3s;
+      transition: opacity 1;
+      pointer-events: none;
     }
-    #overlay.hide { opacity: 0; pointer-events: none; }
+
+    #overlay.hide {
+      opacity: 0;
+    }
   </style>
 </head>
 
-<body>
+<body onclick="forceUnmute()">
   <div data-shaka-player-container class="shaka-video-container">
-    <video id="video" playsinline autoplay></video>
+    <video id="video" playsinline></video>
   </div>
   <div class="watermark">@NOOBGLITCH</div>
-  <div id="overlay">Loading...</div>
+  <div id="overlay">LOADING...</div>
 
   <script>
+    const video = document.getElementById("video");
+    const overlay = document.getElementById("overlay");
+
+    // This function forces un-mute on the very first interaction
+    function forceUnmute() {
+      video.muted = false;
+      video.volume = 1.0;
+      console.log("🔊 Audio Forced Unmuted by User Interaction");
+    }
+
     document.addEventListener("DOMContentLoaded", async () => {
       shaka.polyfill.installAll();
-
-      const video = document.getElementById("video");
-      const overlay = document.getElementById("overlay");
       const player = new shaka.Player(video);
       const ui = new shaka.ui.Overlay(player, document.querySelector(".shaka-video-container"), video);
 
-      ui.configure({
-        controlPanelElements: ['play_pause', 'time_and_duration', 'spacer', 'mute', 'volume', 'quality', 'fullscreen'],
-        addBigPlayButton: true
-      });
-
       const params = new URLSearchParams(location.search);
       const streamURL = params.get("url") || "https://storage.googleapis.com/shaka-demo-assets/angel-one/dash.mpd";
-
-      player.configure({
-        streaming: { lowLatencyMode: true }
-      });
 
       try {
         await player.load(streamURL);
         overlay.classList.add("hide");
 
-        // --- FORCED DIRECT AUTOPLAY LOGIC ---
-        video.muted = false; // Try playing with sound first
-        let playPromise = video.play();
+        // --- FORCED PLAYBACK STRATEGY ---
+        video.muted = true; // Start muted to ensure the browser ALLOWS the video to start
+        video.play();
 
-        if (playPromise !== undefined) {
-          playPromise.catch(error => {
-            // If browser blocks unmuted play, we mute it to start, then unmute
-            console.log("Autoplay with sound blocked. Retrying muted...");
-            video.muted = true;
-            video.play();
-            
-            // Add a one-time click listener to the whole body to unmute
-            document.body.addEventListener('click', () => {
-              video.muted = false;
-            }, { once: true });
+        // Attempt to unmute immediately (Works if the user previously interacted with the site)
+        setTimeout(() => {
+          video.muted = false;
+          video.play().catch(() => {
+            console.log("Browser blocked unmuted autoplay. Waiting for any click to restore sound.");
           });
-        }
+        }, 100);
 
       } catch (err) {
-        overlay.innerText = "Error loading stream.";
         console.error(err);
       }
     });
+
+    // Also try to unmute on scroll or touch if they don't click
+    window.addEventListener('touchstart', forceUnmute, { once: true });
+    window.addEventListener('mousedown', forceUnmute, { once: true });
   </script>
 </body>
+
 </html>
