--- a/master/shakaplayerurl.html
+++ b/master/shakaplayerurl.html
@@ -2,59 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>NoobGLTCH – Shaka Player (Original UI Restored)</title>
+  <title>NoobGLTCH – Ultra Fast Player</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.16.3/controls.css"
-        crossorigin="anonymous">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.16.3/shaka-player.ui.js"
-          crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.16.3/controls.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.16.3/shaka-player.ui.js"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      background: #000;
-      font-family: Arial, sans-serif;
-    }
-    .shaka-video-container, video {
-      width: 100%;
-      height: 100%;
-      background: #000;
-      display: block;
-    }
-    
-    /* WM Opacity 2 - Forced High Visibility */
-    .watermark {
-      position: absolute;
-      top: 40px; 
-      right: 20px;
-      opacity: 2; 
-      font-weight: bold;
-      color: #e53935;
-      z-index: 10;
-      pointer-events: none;
-      text-shadow: 2px 2px 4px rgba(0,0,0,0.9);
-    }
-
-    #overlay {
-      position: fixed;
-      inset: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      background: rgba(0, 0, 0, 0.9);
-      color: #fff;
-      font-size: 16px;
-      z-index: 1000;
-      transition: opacity 0.5s;
-    }
+    html, body { margin: 0; padding: 0; width: 100%; height: 100%; overflow: hidden; background: #000; font-family: Arial, sans-serif; }
+    .shaka-video-container, video { width: 100%; height: 100%; background: #000; display: block; }
+    .watermark { position: absolute; top: 40px; right: 20px; opacity: 2; font-weight: bold; color: #e53935; z-index: 10; pointer-events: none; text-shadow: 2px 2px 4px rgba(0,0,0,0.9); }
+    #overlay { position: fixed; inset: 0; display: flex; align-items: center; justify-content: center; background: rgba(0, 0, 0, 0.9); color: #fff; z-index: 1000; transition: opacity 0.2s; }
     #overlay.hide { opacity: 0; pointer-events: none; }
   </style>
 </head>
@@ -64,91 +23,72 @@
     <video id="video" playsinline></video>
   </div>
   <div class="watermark">@NOOBGLITCH</div>
-  <div id="overlay">Loading player...</div>
+  <div id="overlay">FAST LOADING...</div>
 
   <script>
     const video = document.getElementById("video");
     const overlay = document.getElementById("overlay");
 
-    // Global function to force audio on first user touch/click
     function forceUnmute() {
-      if (video.muted) {
-        video.muted = false;
-        video.volume = 1.0;
-        console.log("🔊 Audio Restored");
-      }
+      if (video.muted) { video.muted = false; video.volume = 1.0; }
     }
 
     document.addEventListener("DOMContentLoaded", async () => {
       shaka.polyfill.installAll();
-
-      if (!shaka.Player.isBrowserSupported()) {
-        overlay.innerText = "Browser not supported.";
-        return;
-      }
-
       const container = document.querySelector(".shaka-video-container");
       const player = new shaka.Player(video);
-
-      // --- RESTORED ORIGINAL UI CONFIGURATION ---
       const ui = new shaka.ui.Overlay(player, container, video);
+
+      // --- ORIGINAL UI CONFIG ---
       ui.configure({
         singleClickForPlayAndPause: true,
-        controlPanelElements: [
-          'play_pause',
-          'time_and_duration',
-          'spacer',
-          'mute',
-          'volume',
-          'captions',
-          'picture_in_picture',
-          'airplay',
-          'cast',
-          'quality',
-          'fullscreen'
-        ],
+        controlPanelElements: ['play_pause', 'time_and_duration', 'spacer', 'mute', 'volume', 'captions', 'picture_in_picture', 'airplay', 'cast', 'quality', 'fullscreen'],
         addBigPlayButton: true,
-        seekBarColors: {
-          base: 'rgba(255,255,255,0.3)',
-          buffered: 'rgba(255,255,255,0.5)',
-          played: '#ffffff'
+      });
+
+      // --- ULTRA FAST HLS/DASH OPTIMIZATION ---
+      player.configure({
+        streaming: {
+          lowLatencyMode: true,
+          bufferingGoal: 1.5,           // Only wait for 1.5s of video to start
+          rebufferingGoal: 0.5,         // Resume instantly if network drops
+          bufferBehind: 0,              // Clear old memory for speed
+          retryParameters: { 
+            timeout: 3000,              // Fail fast on bad requests
+            maxAttempts: 3, 
+            backoffFactor: 1 
+          }
+        },
+        manifest: {
+          retryParameters: { timeout: 3000, maxAttempts: 3 }
         }
       });
 
       const params = new URLSearchParams(location.search);
-      const streamURL = params.get("url") ||
-        "https://storage.googleapis.com/shaka-demo-assets/angel-one/dash.mpd";
+      const streamURL = params.get("url") || "https://storage.googleapis.com/shaka-demo-assets/angel-one/dash.mpd";
 
-      player.configure({
-        streaming: {
-          lowLatencyMode: true,
-        }
-      });
+      // Detect HLS and force HLS-specific optimizations
+      if (streamURL.includes(".m3u8")) {
+        player.configure('manifest.hls.ignoreManifestProgramDateTime', true);
+      }
 
       try {
         await player.load(streamURL);
         overlay.classList.add("hide");
 
-        // --- FORCED AUTOPLAY LOGIC ---
-        // Start muted to bypass browser block
-        video.muted = true; 
+        // Forced Autoplay logic
+        video.muted = true;
         video.play();
-
-        // Attempt immediate unmute
         setTimeout(() => {
           video.muted = false;
-          video.play().catch(() => {
-            console.log("Waiting for user interaction to enable sound...");
-          });
-        }, 150);
+          video.play().catch(() => console.log("Unmute requires click"));
+        }, 100);
 
       } catch (err) {
-        overlay.innerText = "Failed to load stream";
-        console.error(err);
+        overlay.innerText = "STREAM OFFLINE";
       }
     });
 
-    // Event listeners for mobile/touch interactions
     window.addEventListener('touchstart', forceUnmute, { once: true });
     window.addEventListener('mousedown', forceUnmute, { once: true });
   </script>
